--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "make test-all"
   },
   "dependencies": {
+    "mkdirp": "^0.5.0",
+    "mv": "^2.0.3",
     "node-uuid": "~1.4.1"
   },
   "devDependencies": {
